# Embit

./: .gitignore  CMakeLists.txt  README.md
include/embit/: CString.hpp  Chain.hpp  Concat.hpp  Core.hpp  Filter.hpp  Flatten.hpp  FunctionWrapper.hpp  Join.hpp  Map.hpp  Take.hpp
tests/: CMakeLists.txt  Main.cpp
